Much effort put into I2C library for talking to display.

--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -4,6 +4,7 @@ ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=72000000
 PCC.Series=STM32F1
 PB13.GPIOParameters=GPIO_Label
+I2C2.IPParameters=I2C_Mode
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F105VBHx
 PB10.Mode=I2C
@@ -92,7 +93,6 @@ VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 PA14.Mode=Trace_Asynchronous_SW
 File.Version=6
 PA10.GPIO_Label=CONSOLE_RXD
-PB3.GPIOParameters=GPIO_Label
 PE2.Signal=GPIO_Output
 PE1.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -129,6 +129,7 @@ PCC.Seq0.Step0.Peripherals=
 TIM1.Period=720
 PB10.GPIOParameters=GPIO_Label
 PCC.Seq0.Step1.Mode=STOP
+I2C2.I2C_Mode=I2C_Standard
 PA4.GPIO_Label=ADC_SPI1_CSn
 PE2.GPIO_Label=EN_DUT_PWR
 PD15.Signal=GPIO_Input
@@ -138,7 +139,6 @@ PB15.Locked=true
 PA3.Signal=GPXTI3
 PCC.Seq0.Step1.CPU_Frequency=0 Hz
 PCC.Seq0.Step1.Memory=n/a
-PB3.GPIO_Label=SWO
 PA6.GPIOParameters=GPIO_Label
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PCC.Seq0.Step0.Category=In DS Table
