Many changes to A2D related files.  The FATFS file system, and the ability to write to an SD card via SPI, has been added.

--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -5,8 +5,13 @@ RCC.MCOFreq_Value=72000000
 PCC.Series=STM32F1
 PB13.GPIOParameters=GPIO_Label
 I2C2.IPParameters=I2C_Mode
+PA6.Mode=Full_Duplex_Master
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+FATFS._USE_LFN=1
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F105VBHx
+SPI1.VirtualType=VM_MASTER
+SPI2.VirtualType=VM_MASTER
 PB10.Mode=I2C
 PCC.Seq0.Step0.CPU_Frequency=72 MHz
 TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period
@@ -14,7 +19,7 @@ PCC.Seq0.Step0.User's_Consumption=0 mA
 RCC.PLLCLKFreq_Value=72000000
 PB14.GPIO_Label=SD_SPI2_MISO
 PA14.GPIO_Label=SWCLK
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PC0.GPIOParameters=GPIO_Label,GPIO_Mode
 PC0.GPIO_Label=IN_FD_V
@@ -28,6 +33,8 @@ PB11.Signal=I2C2_SDA
 PB15.Signal=SPI2_MOSI
 PB13.Signal=SPI2_SCK
 PinOutPanel.RotationAngle=0
+PE6.GPIO_Label=PB4_n
+PE5.GPIOParameters=GPIO_Label
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
@@ -35,7 +42,7 @@ PE1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PD13.Signal=GPIO_Input
 Mcu.IP4=RCC
 RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP5=SYS
+Mcu.IP5=SPI1
 PD13.Locked=true
 Mcu.IP2=I2C2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -43,26 +50,34 @@ PCC.Seq0.Step1.Oscillator=Regulator_LP
 Mcu.IP3=NVIC
 Mcu.IP0=ADC1
 Mcu.IP1=FATFS
+PE4.GPIOParameters=GPIO_Label
 SH.GPXTI3.ConfNb=1
-TIM1.Prescaler=1000
+TIM1.Prescaler=1000-1
 PCC.PartNumber=STM32F105VBHx
-PD15.GPIOParameters=GPIO_Label
 Mcu.UserConstants=
+PD15.GPIOParameters=GPIO_Label
 Mcu.ThirdPartyNb=0
+SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=8
+Mcu.IPNb=11
+TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
 PCC.Seq0.Step1.TaMax=105
-Mcu.Pin6=PE1
-Mcu.Pin7=PA9
-Mcu.Pin8=OSC_OUT
+SPI1.CalculateBaudRate=562.5 KBits/s
+Mcu.Pin6=OSC_IN
+Mcu.Pin7=PE4
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+Mcu.Pin8=PE1
+PE5.Signal=GPIO_Input
+PE10.Locked=true
+Mcu.Pin9=PA9
 OSC_OUT.Mode=HSE-External-Oscillator
-Mcu.Pin9=PE0
 PCC.Seq0.Step1.Category=In DS Table
 PE1.Signal=GPIO_Output
 OSC_OUT.Signal=RCC_OSC_OUT
 RCC.AHBFreq_Value=72000000
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 PB13.Locked=true
 Mcu.Pin0=PE2
 Mcu.Pin1=PB9
@@ -70,32 +85,44 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PB3
 Mcu.Pin3=PA14
 Mcu.Pin4=PA13
-Mcu.Pin5=OSC_IN
+Mcu.Pin5=PE3
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=12000000
+RCC.HSE_VALUE=16000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-RCC.PLL3CLKoutputFreqValue=96000000
+RCC.PLL3CLKoutputFreqValue=128000000
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PCC.Seq0.Step1.Vdd=3.3
 PB3.Mode=Trace_Asynchronous_SW
 PA4.Locked=true
 PCC.Seq0.Step0.Voltage_Source=Battery
+Mcu.IP10=USART1
 PCC.Seq0.Step0.DMIPS=90.0
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-RCC.PLLMUL=RCC_PLL_MUL6
+RCC.PLLMUL=RCC_PLL_MUL9
 PB12.GPIO_Label=SD_SPI2_CSn
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 MxDb.Version=DB.6.0.21
-PE0.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
+PE9.Signal=GPIO_Output
 PA14.Mode=Trace_Asynchronous_SW
+PE8.Locked=true
+PB14.Mode=Full_Duplex_Master
+PE9.Locked=true
 File.Version=6
 PA10.GPIO_Label=CONSOLE_RXD
+PE4.GPIO_Label=PB2_n
+SPI2.CalculateBaudRate=9.0 MBits/s
+PE3.GPIOParameters=GPIO_Label
+PE3.Locked=true
 PE2.Signal=GPIO_Output
 PE1.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PE4.Signal=GPIO_Input
+PE10.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Label
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
@@ -105,29 +132,37 @@ PCC.Seq0.Step0.Oscillator=HSE PLL
 PD13.GPIO_Label=REV_0
 PB9.Signal=GPIO_Output
 Mcu.Package=LFBGA100
+TIM2.Prescaler=71
 PA6.Signal=SPI1_MISO
 PA5.Locked=true
 PA7.Locked=true
+SPI2.Mode=SPI_MODE_MASTER
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 RCC.I2S2Freq_Value=72000000
+PE10.GPIOParameters=GPIO_Label
 PA14.Locked=true
 ProjectManager.ToolChainLocation=
 PD14.Locked=true
 PCC.Seq0.Step1.Average_Current=26 \u00B5A
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=USART1_RX
-RCC.PLL2CLKoutputFreqValue=96000000
+RCC.PLL2CLKoutputFreqValue=128000000
 PCC.Checker=false
 PA5.GPIOParameters=GPIO_Label
 PB14.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=PB1_ACTIVE
 PCC.Seq0.Step0.Duration=0.05 ms
 PCC.Seq0.Step1.DMIPS=0.0
 RCC.APB1TimFreq_Value=72000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PCC.Seq0.Step0.Peripherals=
+SPI2.Direction=SPI_DIRECTION_2LINES
 TIM1.Period=720
 PB10.GPIOParameters=GPIO_Label
+PB13.Mode=Full_Duplex_Master
+PE6.Locked=true
+PE7.Signal=GPIO_Output
+PE10.GPIO_Label=LED4
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 PCC.Seq0.Step1.Mode=STOP
 I2C2.I2C_Mode=I2C_Standard
 PA4.GPIO_Label=ADC_SPI1_CSn
@@ -137,21 +172,25 @@ ProjectManager.CustomerFirmwarePackage=
 PB3.Locked=true
 PB15.Locked=true
 PA3.Signal=GPXTI3
+PA5.Mode=Full_Duplex_Master
 PCC.Seq0.Step1.CPU_Frequency=0 Hz
 PCC.Seq0.Step1.Memory=n/a
 PA6.GPIOParameters=GPIO_Label
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 PCC.Seq0.Step0.Category=In DS Table
-RCC.PLL3VCOoutputFreqValue=192000000
+RCC.PLL3VCOoutputFreqValue=256000000
 ProjectManager.ProjectFileName=power_logger.ioc
+PE8.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=REV_2
 ADC1.Rank-0\#ChannelRegularConversion=1
+PA7.Mode=Full_Duplex_Master
 PB9.GPIO_Label=SWO
 PA10.Mode=Asynchronous
-Mcu.PinsNb=30
+Mcu.PinsNb=39
 PCC.Seq0.Step0.Average_Current=28.3 mA
 PCC.Vdd=3.3
 ProjectManager.NoMain=false
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
 PA9.GPIO_Label=CONSOLE_TX
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
@@ -170,7 +209,9 @@ RCC.FamilyName=M
 RCC.I2S3Freq_Value=72000000
 PB9.GPIOParameters=GPIO_Label
 PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE9.GPIOParameters=GPIO_Label
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
+FATFS.IPParameters=_USE_LFN,_MAX_SS
 PA13.Signal=SYS_JTMS-SWDIO
 PCC.Seq0.Step0.TaMax=101.26
 PCC.MCU=STM32F105V(8-B)Hx
@@ -178,18 +219,23 @@ PA9.Mode=Asynchronous
 PB11.Mode=I2C
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB10.GPIO_Label=DISP_I2C2_SCL
+PE7.GPIOParameters=GPIO_Label
 PCC.Seq0.Step1.User's_Consumption=0 mA
 PCC.Seq0.Step0.Mode=RUN
+PE8.GPIO_Label=LED2
 PA9.Signal=USART1_TX
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 PB9.Locked=true
+PE4.Locked=true
 PB11.GPIOParameters=GPIO_Label
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 PE2.GPIOParameters=GPIO_Label
 ProjectManager.RegisterCallBack=
 OSC_IN.Signal=RCC_OSC_IN
-PE0.Locked=true
 RCC.USBFreq_Value=48000000
+PE9.GPIO_Label=LED3
 VP_FATFS_VS_Generic.Mode=User_defined
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 PB10.Signal=I2C2_SCL
 PB14.Signal=SPI2_MISO
 PA5.Signal=SPI1_SCK
@@ -198,101 +244,124 @@ PCC.Temperature=25
 SH.GPXTI3.0=GPIO_EXTI3
 PE1.GPIO_Label=HLTH_LED
 ProjectManager.LastFirmware=true
-RCC.VCOOutput2Freq_Value=12000000
+PB15.Mode=Full_Duplex_Master
+RCC.VCOOutput2Freq_Value=8000000
 RCC.APB2Freq_Value=72000000
 PCC.Seq0.Step0.Frequency=8 MHz
 PCC.Seq0.Step0.Vcore=No Scale
 MxCube.Version=6.2.1
 PC0.GPIO_Mode=GPIO_MODE_ANALOG
+Mcu.Pin37=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM2_VS_no_output1
 PB15.GPIO_Label=SD_SPI2_MOSI
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+PE8.Signal=GPIO_Output
+Mcu.Pin36=VP_TIM1_VS_no_output1
+SPI1.Mode=SPI_MODE_MASTER
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.ADCx_IN10.ConfNb=1
+Mcu.Pin30=PE9
 PA10.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
+Mcu.Pin33=VP_FATFS_VS_Generic
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin31=PB11
+Mcu.Pin32=PB12
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD14.GPIO_Label=REV_1
 PA4.GPIOParameters=GPIO_Label
+PE5.Locked=true
+PE6.Signal=GPIO_Input
 PB15.GPIOParameters=GPIO_Label
+PE7.Locked=true
 PA13.Mode=Trace_Asynchronous_SW
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLL2CLKoutputFreqValue,PLL2VCOoutputFreqValue,PLL3CLKoutputFreqValue,PLL3VCOoutputFreqValue,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,Prediv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,HSE_VALUE,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLL2CLKoutputFreqValue,PLL2VCOoutputFreqValue,PLL3CLKoutputFreqValue,PLL3VCOoutputFreqValue,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,Prediv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F105V(8-B)Hx
-PE0.Signal=GPIO_Input
-Mcu.Pin26=VP_FATFS_VS_Generic
-Mcu.Pin27=VP_SYS_VS_Systick
+PE7.GPIO_Label=LED1
+Mcu.Pin26=PB13
+Mcu.Pin27=PD13
 PA13.GPIO_Label=SWDIO
-Mcu.Pin24=PB11
+Mcu.Pin24=PE8
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PB12
+Mcu.Pin25=PB10
+FATFS._MAX_SS=4096
+Mcu.IP8=TIM1
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+Mcu.IP9=TIM2
 PD14.Signal=GPIO_Input
-Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
-Mcu.IP6=TIM1
-Mcu.Pin29=VP_TIM1_VS_no_output1
-Mcu.IP7=USART1
+Mcu.Pin28=PA3
+Mcu.IP6=SPI2
+Mcu.Pin29=PA7
+Mcu.IP7=SYS
 ProjectManager.CoupleFile=false
 PCC.Seq0.Step0.Memory=FLASH
 PB3.Signal=SYS_TRACESWO
-PA4.Signal=SPI1_NSS
+PA4.Signal=GPIO_Output
 PD14.GPIOParameters=GPIO_Label
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=PA3
-Mcu.Pin23=PA7
+Mcu.Pin22=PD14
+Mcu.Pin23=PA6
 RCC.TimSysFreq_Value=72000000
-Mcu.Pin20=PB13
+Mcu.Pin20=PE7
 PA7.GPIO_Label=ADC_SPI1_MOSI
 ADC1.master=1
 PA3.Locked=true
-Mcu.Pin21=PD13
+Mcu.Pin21=PB14
 PA10.Locked=true
 PA5.GPIO_Label=ADC_SPI1_CLK
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 OSC_IN.Mode=HSE-External-Oscillator
 PA14.GPIOParameters=GPIO_Label
+RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Locked=true
+PE5.GPIO_Label=PB3_n
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA5
+Mcu.Pin15=PA4
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PD15
-Mcu.Pin19=PB10
+Mcu.Pin16=PE10
+Mcu.Pin13=PE6
+Mcu.Pin14=PC0
+Mcu.Pin19=PA5
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PD14
-Mcu.Pin18=PA6
+Mcu.Pin17=PB15
+Mcu.Pin18=PD15
 PCC.Seq0.Step1.Frequency=0 Hz
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PC0
-Mcu.Pin12=PA4
-Mcu.Pin10=PA10
+Mcu.Pin11=PE5
+Mcu.Pin12=PA10
+Mcu.Pin10=OSC_OUT
 PCC.Seq0.Step1.Peripherals=
 PE2.Locked=true
+PE3.Signal=GPIO_Input
+PE3.GPIO_Label=PB1_n
 PCC.Seq0.Step1.Vcore=No Scale
 PCC.Seq0.Step1.Voltage_Source=Battery
 PCC.Seq0.Step0.Vdd=3.3
 PCC.Seq0=2
 RCC.APB1Freq_Value=36000000
-RCC.PLL2VCOoutputFreqValue=192000000
+RCC.PLL2VCOoutputFreqValue=256000000
 PA7.GPIOParameters=GPIO_Label
 PC0.Locked=true
 PB11.Locked=true
 ProjectManager.DeviceId=STM32F105VBHx
 PB12.GPIOParameters=GPIO_Label
-PB12.Signal=SPI2_NSS
+PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
 PE1.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA3.GPIO_Label=ADC_ALRTn
-RCC.Prediv2FreqValue=12000000
+RCC.Prediv2FreqValue=16000000
 PA7.Signal=SPI1_MOSI
 PA6.Locked=true
 isbadioc=false
