Many general updates.  Code compiles with 45 warnings.

--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -59,7 +59,7 @@ PD15.GPIOParameters=GPIO_Label
 Mcu.ThirdPartyNb=0
 SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=11
+Mcu.IPNb=12
 TIM2.IPParameters=Channel-Output Compare1 No Output,Prescaler
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=72000000
@@ -97,10 +97,11 @@ PCC.Seq0.Step1.Vdd=3.3
 PB3.Mode=Trace_Asynchronous_SW
 PA4.Locked=true
 PCC.Seq0.Step0.Voltage_Source=Battery
-Mcu.IP10=USART1
+Mcu.IP10=TIM3
 PCC.Seq0.Step0.DMIPS=90.0
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLMUL=RCC_PLL_MUL9
+Mcu.IP11=USART1
 PB12.GPIO_Label=SD_SPI2_CSn
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 MxDb.Version=DB.6.0.21
@@ -111,6 +112,7 @@ PA14.Mode=Trace_Asynchronous_SW
 PE8.Locked=true
 PB14.Mode=Full_Duplex_Master
 PE9.Locked=true
+TIM3.Prescaler=71
 File.Version=6
 PA10.GPIO_Label=CONSOLE_RXD
 PE4.GPIO_Label=PB2_n
@@ -184,9 +186,10 @@ PE8.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=REV_2
 ADC1.Rank-0\#ChannelRegularConversion=1
 PA7.Mode=Full_Duplex_Master
+TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 PB9.GPIO_Label=SWO
 PA10.Mode=Asynchronous
-Mcu.PinsNb=39
+Mcu.PinsNb=40
 PCC.Seq0.Step0.Average_Current=28.3 mA
 PCC.Vdd=3.3
 ProjectManager.NoMain=false
@@ -218,6 +221,7 @@ PCC.MCU=STM32F105V(8-B)Hx
 PA9.Mode=Asynchronous
 PB11.Mode=I2C
 ProjectManager.TargetToolchain=STM32CubeIDE
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 PB10.GPIO_Label=DISP_I2C2_SCL
 PE7.GPIOParameters=GPIO_Label
 PCC.Seq0.Step1.User's_Consumption=0 mA
@@ -240,6 +244,7 @@ PB10.Signal=I2C2_SCL
 PB14.Signal=SPI2_MISO
 PA5.Signal=SPI1_SCK
 board=custom
+VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
 PCC.Temperature=25
 SH.GPXTI3.0=GPIO_EXTI3
 PE1.GPIO_Label=HLTH_LED
@@ -259,12 +264,14 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 PE8.Signal=GPIO_Output
 Mcu.Pin36=VP_TIM1_VS_no_output1
 SPI1.Mode=SPI_MODE_MASTER
+Mcu.Pin39=VP_TIM3_VS_no_output1
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 SH.ADCx_IN10.ConfNb=1
 Mcu.Pin30=PE9
 PA10.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
 Mcu.Pin33=VP_FATFS_VS_Generic
+TIM3.IPParameters=Channel-Output Compare1 No Output,Prescaler
 Mcu.Pin34=VP_SYS_VS_Systick
 Mcu.Pin31=PB11
 Mcu.Pin32=PB12
