--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -10,8 +10,9 @@ FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.ClockSpeed=50000
 I2C2.I2C_Mode=I2C_Standard
-I2C2.IPParameters=I2C_Mode
+I2C2.IPParameters=I2C_Mode,ClockSpeed
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
@@ -298,7 +299,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
