SPI data to the A2D appears to be transmitting properly.  However, in this version, nothing is being read back.

--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -335,9 +335,10 @@ SH.ADCx_IN10.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CalculateBaudRate=281.25 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
