Able to write to OLED and read/write from SD card.

--- a/power_logger.ioc
+++ b/power_logger.ioc
@@ -5,7 +5,7 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
-FATFS.IPParameters=_USE_LFN,_MAX_SS
+FATFS.IPParameters=_MAX_SS,_USE_LFN
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
 File.Version=6
@@ -147,22 +147,26 @@ PB11.GPIO_Pu=GPIO_PULLUP
 PB11.Locked=true
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_Speed,GPIO_Label
 PB12.GPIO_Label=SD_SPI2_CSn
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB12.Locked=true
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Label
-PB13.GPIO_Label=SD_SPI2_CLK
+PB13.GPIOParameters=GPIO_Speed,GPIO_Mode
+PB13.GPIO_Mode=GPIO_MODE_AF_PP
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=SD_SPI2_MISO
+PB14.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PB14.GPIO_Mode=GPIO_MODE_INPUT
+PB14.GPIO_PuPd=GPIO_NOPULL
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=SD_SPI2_MOSI
+PB15.GPIOParameters=GPIO_Speed,GPIO_Mode
+PB15.GPIO_Mode=GPIO_MODE_AF_PP
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
@@ -335,14 +339,14 @@ SH.ADCx_IN10.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CalculateBaudRate=281.25 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI2.CalculateBaudRate=9.0 MBits/s
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI2.CalculateBaudRate=281.25 KBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
